# traceaudit-paper

./: .gitignore  README.md  costs.md  decisions.md  hypotheses.md  open_questions.md  pyproject.toml
docs/: storage_layout.md
migrations/: CHANGELOG.md
src/trace/: schema.py
src/traceaudit/: __init__.py
src/traceaudit/cache/: sqlite.py
src/traceaudit/trace/: __init__.py  exceptions.py  io.py  recorder.py  schema.py
tests/: conftest.py  test_cache_sqlite.py  test_exceptions.py  test_io_atomic_rename.py  test_io_cost_reconciliation.py  test_io_roundtrip.py  test_recorder.py
