[project]
name = "traceaudit"
version = "0.0.1"
description = "Counterfactual auditing of agentic RAG."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Recep Kaan Karaman" },
    { name = "Meftun Akarsu" },
]
dependencies = [
    "pydantic>=2.7",
    "pyarrow>=16",
    "pytest>=8",
    "ruff",
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/traceaudit"]
